<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="test"
    tools:context=".ui.SettingsActivity">

    <Button
        android:id="@+id/backButton"
        android:layout_width="54dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="#00FFFFFF"
        android:onClick="closeActivity"
        app:icon="@drawable/misc_arrow_back"
        app:iconTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/preferencesButton"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="28dp"
        android:background="@null"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/misc_chevron_right"
        android:drawableTint="@color/primary"
        android:foregroundTintMode="src_atop"
        android:onClick="openPreferences"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/preferences"
        android:textAlignment="textStart"
        android:textColor="@color/primary"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/manageDataButton"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@null"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/misc_chevron_right"
        android:drawableTint="@color/primary"
        android:foregroundTintMode="src_atop"
        android:onClick="openManageData"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/manage_data"
        android:textAlignment="textStart"
        android:textColor="@color/primary"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadScansButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uploadScansButton"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="28dp"
        android:background="@null"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/misc_chevron_right"
        android:drawableTint="@color/primary"
        android:foregroundTintMode="src_atop"
        android:onClick="openUploadScans"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/upload_scans"
        android:textAlignment="textStart"
        android:textColor="@color/primary"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/developer_options"
        android:textColor="@color/secondaryVariant"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferencesButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/settings"
        android:textColor="@color/secondaryVariant"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/checkExposureMenuButton"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@null"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/misc_chevron_right"
        android:drawableTint="@color/primary"
        android:foregroundTintMode="src_atop"
        android:onClick="openCheckExposure"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/check_exposure"
        android:textAlignment="textStart"
        android:textColor="@color/primary"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manageDataButton" />

    <TextView
        android:id="@+id/iconAttributionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/icons_made_by_freepik_from_www_flaticon_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>